--- a/appsettings.json
+++ b/appsettings.json
@@ -9,7 +9,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DevConnection": "Server=Localhost\\SQLEXPRESS;Database=CAFE_MENU;User Id=cetin;Password=1234;TrustServerCertificate=True;",
-    "ExcelConString": "Provider=Microsoft.ACE.OLEDB.12.0;Data Source={0};Extended Properties='Excel 8.0;HDR=YES'"
 
+  },
+  "Redis": {
+    "ConnectionString": "localhost:6379,password=redis123"
   }
 }
